<resources>
    <string name="app_name">Projet Android</string>
    <string name="database">database.db</string>

    <string name="cancel">Annuler</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="deleted">Supprimé</string>
    <string name="reload">Recharger</string>
    <string name="reloaded">Rechargé</string>
    <string name="save">Sauvegarder</string>
    <string name="saved">Sauvegardé</string>

    <string name="champs_requis">* champs requis</string>
    <string name="unknown_address">Adresse inconue</string>
    <string name="ville">Ville</string>
    <string name="pays">Pays</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <!-- Navigation -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="label_match">Match</string>
    <string name="label_matchs">Matchs</string>
    <string name="label_position">Position</string>

    <string name="label_joueur">Joueur</string>
    <string name="label_joueurs">Joueurs</string>

    <string name="label_photo">Photo</string>
    <string name="label_photos">Photos</string>

    <string name="label_settings">Paramètres</string>

    <!-- Joueur -->
    <string name="label_ajout_joueur">Nouveau joueur</string>
    <string name="label_select_joueur">Choisissez un joueur</string>

    <string name="joueur_title_infos">Informations :</string>
    <string name="joueur_format_nom" formatted="true">%s %s</string>

    <string name="joueur_hint_nom">Nom*</string>
    <string name="joueur_hint_prenom">Prénom*</string>

    <!-- Match -->
    <string name="label_ajout_match">Nouveau match</string>

    <string name="match_hint_titre">Titre*</string>
    <string name="match_hint_description">Description</string>
    <string name="action_edit">Modifier</string>

    <!-- Photo -->
    <string name="take_photo">Prendre une photo</string>

    <!-- Settings -->
    <string name="settings_srv">Serveur distant</string>
    <string name="settings_srv_address">Adresse IP</string>
    <string name="settings_srv_port">Port</string>
</resources>
