<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_matchs">

    <!-- Fragments -->
    <fragment android:id="@+id/fragment_matchs"
        android:label="@string/label_matchs"
        android:name="net.capellari.julien.projetandroid.matchs.MatchsFragment"

        tools:layout="@layout/list_fragment">

        <!-- Actions -->
        <action android:id="@+id/action_show_match"
            app:destination="@id/fragment_match" />
    </fragment>

    <fragment android:id="@+id/fragment_match"
        android:label="@string/label_match"
        android:name="net.capellari.julien.projetandroid.matchs.MatchFragment"

        tools:layout="@layout/fragment_match">

        <!-- Arguments -->
        <argument android:name="match_id" app:argType="long" />

        <!-- Actions -->
        <action android:id="@+id/action_select_joueur"
            app:destination="@id/fragment_selectJoueur" />
    </fragment>

    <fragment android:id="@+id/fragment_joueurs"
        android:label="@string/label_joueurs"
        android:name="net.capellari.julien.projetandroid.joueurs.JoueursFragment"

        tools:layout="@layout/list_fragment" />

    <fragment android:id="@+id/fragment_selectJoueur"
        android:name="net.capellari.julien.projetandroid.joueurs.SelectJoueurFragment"
        android:label="@string/label_select_joueur" >

        <!-- Arguments -->
        <argument android:name="score_id" app:argType="long" />
    </fragment>
</navigation>